fixed header so text scrolls behind. fixed content bottom margin so text not hidden behind navbar

--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -7,6 +7,8 @@
   justify-content: space-between;
   align-items: center;
 
+  position: fixed;
+  top: 0;
   height: 55px;
   width: 100%;
 
